--- a/data-science/_config.yml
+++ b/data-science/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: Data Analysis
+title: Data Science
 author: A-S620
 logo: 320_002.png
 
@@ -22,7 +22,7 @@ bibtex_bibfiles:
 # Information about where the book exists on the web
 repository:
   url: https://github.com/A-S620/data-analysis # Online location of your book
-  path_to_book: data-analysis  # Optional path to your book, relative to the repository root
+  path_to_book: data-science  # Optional path to your book, relative to the repository root
   branch: main  # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
