refactoring, adding in parts

--- a/notebook/_toc.yml
+++ b/notebook/_toc.yml
@@ -3,8 +3,10 @@
 
 format: jb-book
 root: intro
-chapters:
-- file: DescriptiveAnalysis
-- file: Histograms
-- file: SimpleLinearRegression
-- file: MultipleLinearRegression
+parts:
+- caption: Data Analysis
+  chapters:
+  - file: DataAnalysis/DescriptiveAnalysis
+  - file: DataAnalysis/Histograms
+  - file: DataAnalysis/SimpleLinearRegression
+  - file: DataAnalysis/MultipleLinearRegression
