Created a PythonBasics notebook and added it to contents Updated readme

--- a/notebook/_toc.yml
+++ b/notebook/_toc.yml
@@ -10,3 +10,6 @@ parts:
   - file: DataAnalysis/Histograms
   - file: DataAnalysis/SimpleLinearRegression
   - file: DataAnalysis/MultipleLinearRegression
+- caption: Python Basics
+  chapters:
+    - file: PythonBasics/PythonBasics
