--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -3,8 +3,7 @@ name: deploy-book
 # Only run this when the master branch changes
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
     paths:
       - notebook/**
 
