--- a/notebook/_toc.yml
+++ b/notebook/_toc.yml
@@ -19,3 +19,4 @@ parts:
   chapters:
     - file: Projects/USMedicalInsuranceCosts
     - file: Projects/ProductDefects
+    - file: Projects/BillboardData
